--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,37 +21,37 @@ import Shelf from "../components/Shelf.astro";
     <main>
       <Shelf title="Focus">
         <PlaylistCard
-          imgPath="https://api.lorem.space/image/album?w=350&h=350&hash=8B7BCDC2"
+          imgPath="https://picsum.photos/id/14/350/350.webp"
           title="Peaceful Piano"
           body="Relax and indulge with beautiful piano pieces"
         />
         <PlaylistCard
-          imgPath="https://api.lorem.space/image/album?w=350&h=350&hash=B0E33EF4"
+          imgPath="https://picsum.photos/id/15/350/350.webp"
+          title="Deep Focus"
+          body="Keep calm and focus with ambient and post-rock music."
+        />
+        <PlaylistCard
+          imgPath="https://picsum.photos/id/16/350/350.webp"
           title="Peaceful Piano"
           body="Relax and indulge with beautiful piano pieces"
         />
         <PlaylistCard
-          imgPath="https://api.lorem.space/image/album?w=350&h=350&hash=7F5AE56A"
+          imgPath="https://picsum.photos/id/17/350/350.webp"
           title="Peaceful Piano"
           body="Relax and indulge with beautiful piano pieces"
         />
         <PlaylistCard
-          imgPath="https://api.lorem.space/image/album?w=350&h=350&hash=500B67FB"
+          imgPath="https://picsum.photos/id/11/350/350.webp"
           title="Peaceful Piano"
           body="Relax and indulge with beautiful piano pieces"
         />
         <PlaylistCard
-          imgPath="https://api.lorem.space/image/album?w=350&h=350&hash=2D297A22"
+          imgPath="https://picsum.photos/id/12/350/350.webp"
           title="Peaceful Piano"
           body="Relax and indulge with beautiful piano pieces"
         />
         <PlaylistCard
-          imgPath="https://api.lorem.space/image/album?w=350&h=350&hash=9D9539E7"
-          title="Peaceful Piano"
-          body="Relax and indulge with beautiful piano pieces"
-        />
-        <PlaylistCard
-          imgPath="https://api.lorem.space/image/album?w=350&h=350&hash=4F32C4CF"
+          imgPath="https://picsum.photos/id/13/350/350.webp"
           title="Peaceful Piano"
           body="Relax and indulge with beautiful piano pieces"
         />
@@ -59,37 +59,37 @@ import Shelf from "../components/Shelf.astro";
 
       <Shelf title="Spotify Playlist">
         <PlaylistCard
-          imgPath="https://api.lorem.space/image/album?w=350&h=350&hash=A89D0DE6"
+          imgPath="https://picsum.photos/id/18/350/350.webp"
           title="Peaceful Piano"
           body="Relax and indulge with beautiful piano pieces"
         />
         <PlaylistCard
-          imgPath="https://api.lorem.space/image/album?w=350&h=350&hash=2D297A22"
+          imgPath="https://picsum.photos/id/19/350/350.webp"
           title="Peaceful Piano"
           body="Relax and indulge with beautiful piano pieces"
         />
         <PlaylistCard
-          imgPath="https://api.lorem.space/image/album?w=350&h=350&hash=9D9539E7"
+          imgPath="https://picsum.photos/id/20/350/350.webp"
           title="Peaceful Piano"
           body="Relax and indulge with beautiful piano pieces"
         />
         <PlaylistCard
-          imgPath="https://api.lorem.space/image/album?w=350&h=350&hash=4F32C4CF"
+          imgPath="https://picsum.photos/id/21/350/350.webp"
           title="Peaceful Piano"
           body="Relax and indulge with beautiful piano pieces"
         />
         <PlaylistCard
-          imgPath="https://api.lorem.space/image/album?w=350&h=350&hash=8B7BCDC2"
+          imgPath="https://picsum.photos/id/22/350/350.webp"
           title="Peaceful Piano"
           body="Relax and indulge with beautiful piano pieces"
         />
         <PlaylistCard
-          imgPath="https://api.lorem.space/image/album?w=350&h=350&hash=B0E33EF4"
+          imgPath="https://picsum.photos/id/23/350/350.webp"
           title="Peaceful Piano"
           body="Relax and indulge with beautiful piano pieces"
         />
         <PlaylistCard
-          imgPath="https://api.lorem.space/image/album?w=350&h=350&hash=7F5AE56A"
+          imgPath="https://picsum.photos/id/24/350/350.webp"
           title="Peaceful Piano"
           body="Relax and indulge with beautiful piano pieces"
         />
